Fix CSS: image overflow element issue.

--- a/src/css/comment.less
+++ b/src/css/comment.less
@@ -100,6 +100,10 @@
         & > *:last-child {
           margin-bottom: 0;
         }
+
+        img {
+          max-width: 100%;
+        }
       }
 
       & > .artalk-footer {
